# NYPDarrestdata

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Jupyter_example/: Untitled.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
source/: conf.py  index.rst
src/nypdarrestdata/: __init__.py  analyze_region_danger.py  data_fetching.py  numeric_analysis_of_arrests.py  plot_crime_map.py
tests/: fetch_arrest_data.py  plot_crime_map.py  test_analyze_region_danger.py  test_fetch_arrest_data.py  test_numeric_analysis_of_arrests.py  test_nypdarrestdata.py
