[tool.poetry]
name = "nypdarrestdata"
version = "0.1.0"
description = "A toolkit for fetching, analyzing, and visualizing NYPD Arrest Data."
authors = ["Benny Ha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
